fixed profile text on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -366,8 +366,7 @@ h2,h3,h6 {line-height: 1.5em;	font-size: 1.5em;}
 
 @media (max-height: 1280px) and (max-width: 980px) { #profilepic{float:none;display:block;margin: 0em auto; } }
 @media (max-height:: 1280px) and (max-width: 980px) {#profilepic img{display:block;float:none;margin:0 auto;width:auto;}}
-
-@media only screen and (max-width: 980px) {#profiletext{float:none;margin:2em auto 0 auto;padding:0;}}
+@media only screen and (max-width: 980px) {#profiletext{float:none;margin:1em auto 0 auto;padding:0;}}
 
 /* Footer */
 .wrapper.endstyle {font-family: 'Lato', sans-serif;}
@@ -446,7 +445,7 @@ footer > :last-child {margin-bottom: 0;}
 		.contactbin div li a:hover{text-decoration: underline;color:  #373D3F;}
 
 	#contactsection {display:inline-block;overflow:hidden;padding: 1em 0;margin: auto;width:33.3%;}
-@media only screen and (max-width: 980px){ #contactsection{ display:block; width:auto; }}
+@media only screen and (max-width: 980px){ #contactsection{ display:block; width:auto; margin:0 auto; }}
 #contactwrap {float: left;position: relative;left: 50%;}
 #contactitem {float: left;position: relative;left: -50%;}
 
